force-app/main/default/objects/Risk_Assessment_Result__c/Risk_Assessment_Result__c.object-meta.xml
<CustomObject>
    <label>Risk Assessment Result</label>
    <nameField>
        <label>Risk Assessment Result</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Assessment Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>