force-app/main/default/objects/Risk_Assessment_Result__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risk Assessment Results</relationshipLabel>
    <relationshipName>Risk_Assessment_Results</relationshipName>
    <type>Lookup</type>
</CustomField>