force-app/main/default/objects/Risk_Assessment_Result__c/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <label>Patient First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>