force-app/main/default/objects/Risk_Assessment_Result__c/fields/Risk_Assessment_Definition__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Risk Assessment  Definition</label>
    <referenceTo>Risk_Assessment_Definition__c</referenceTo>
    <relationshipLabel>Risk Assessment Results</relationshipLabel>
    <relationshipName>Risk_Assessment_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>