force-app/main/default/objects/Risk_Assessment_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Final_Score__c</columns>
    <columns>Patient_First_Name__c</columns>
    <columns>Patient_Last_Name__c</columns>
    <columns>Mobile_Phone__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>